name:                arow-sample-webapp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://arow-oss/arow-sample-webapp#readme
license:             BSD3
license-file:        LICENSE
author:              ARoW
maintainer:          example@example.com
copyright:           2017 ARoW
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , App.Config
                     , App.Environment
  build-depends:       base >= 4.9 && < 5
                     -- , aeson
                     -- , base64-bytestring
                     -- , bytestring
                     -- , classy-prelude
                     -- , exceptions
                     -- , from-sum
                     -- , http-conduit
                     -- , http-types
                     -- , lens
                     -- , lens-aeson
                     -- , monad-control
                     -- , monad-logger
                     , mtl
                     , natural-transformation
                     , persistent
                     , read-env-var
                     , servant
                     , servant-server
                     -- , text
                     -- , time
                     , transformers
                     -- , transformers-base
                     -- , twitter-app-only
                     -- , twitter-types
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , OverloadedStrings
                     , RankNTypes
                     , TypeOperators
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

executable arow-sample-webapp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arow-sample-webapp
  default-language:    Haskell2010

test-suite arow-sample-webapp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arow-sample-webapp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arow-oss/arow-sample-webapp
