name:                arow-sample-webapp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://arow-oss/arow-sample-webapp#readme
license:             BSD3
license-file:        LICENSE
author:              ARoW
maintainer:          example@example.com
copyright:           2017 ARoW
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , App.Cli
                     , App.Config
                     , App.Db
                     , App.Db.Types
                     , App.Environment
                     , App.Monad
                     , App.Password
                     , App.Server
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , bytestring
                     , cereal
                     , data-default
                     , exceptions
                     , monad-logger
                     , mtl
                     , natural-transformation
                     , optparse-applicative
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , read-env-var
                     , scrypt
                     , servant
                     , servant-auth-cookie
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveGeneric
                     , FlexibleContexts
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , TypeFamilies
                     , TypeOperators
  other-extensions:    QuasiQuotes
                     , TemplateHaskell
  ghc-options:         -Wall

executable arow-sample-webapp
  hs-source-dirs:      app/server
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arow-sample-webapp
  default-language:    Haskell2010

executable arow-sample-cli
  hs-source-dirs:      app/cli
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arow-sample-webapp
  default-language:    Haskell2010

test-suite arow-sample-webapp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arow-sample-webapp
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arow-oss/arow-sample-webapp
